[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/shadows.png" type="Texture" id=1]
[ext_resource path="res://characters/Mob.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "appear",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[node name="Mob" type="RigidBody2D" groups=[
"mobs",
]]
position = Vector2( 241.565, 366.323 )
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.3, 0.3 )
polygon = PoolVector2Array( -99.1761, 41.9741, -93.0233, 39.4431, -92.365, 32.8127, -86.9244, 32.0355, -86.9244, 26.5948, -79.152, 26.5948, -78.7634, 12.6047, -72.5456, 12.2161, -72.157, -8.38062, -65.5505, -8.38062, -64.3846, -29.3658, -58.5554, -30.1431, -58.5554, -63.5641, -50.8523, -64.5363, -50.8523, -77.0911, -44.092, -77.0911, -43.4482, -90.6116, -37.9755, -91.5774, -37.3317, -97.3718, -30.8934, -97.05, -28.9619, -104.776, -23.1674, -105.742, -23.4893, -110.892, -2.24274, -111.536, -1.59888, -118.618, 39.9285, -118.94, 40.2504, -112.18, 59.8873, -111.214, 60.8531, -105.098, 66.6476, -104.132, 67.9353, -98.0157, 74.6956, -97.05, 75.0175, -91.5774, 80.812, -90.6116, 81.4558, -76.7692, 88.538, -76.4473, 89.1818, -63.5706, 60.8531, -62.9266, 60.8531, -36.8514, 89.5038, -14.6392, 96.5859, -16.5706, 95.7248, 27.3726, 89.1183, 38.6426, 81.7346, 40.9741, 81.3614, 48.1824, 74.5337, 47.6946, 74.5336, 54.0345, 67.7058, 55.01, 67.7058, 60.8624, 47.2225, 61.3501, 46.7348, 68.6655, 33.0792, 68.6655, 33.5669, 75.4933, 19.4237, 75.4933, 18.936, 83.7842, -23.9814, 84.2719, -24.9568, 75.4933, -57.7786, 75.1724, -58.9445, 68.9545, -87.3134, 68.5658, -87.702, 61.5709, -98.1946, 61.1823, -100.526, 54.9644, -105.19, 55.353, -106.744, 49.1351 )
one_way_collision_margin = 3.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.59149, -6.52795 )
scale = Vector2( 0.2611, 0.259201 )
frames = SubResource( 9 )
animation = "attack"
frame = 3

[node name="changeAnimation" type="Timer" parent="."]
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="changeAnimation" to="." method="_on_changeAnimation_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
